adding vit predictions

--- a/s4/config.yaml
+++ b/s4/config.yaml
@@ -17,7 +17,7 @@ train:
   lr: 0.001
   lr_schedule: false
   weight_decay: 0.01
-  checkpoint: false
+  checkpoint: true
   suffix: null # String to use for checkpoint suffix
   sample: null # Sample during validation with desired prefix length
 
